--- a/slides/main.tex
+++ b/slides/main.tex
@@ -53,8 +53,8 @@
     \titlepage
 \end{frame}
 
-%\subfile{sections/basics}
-%\subfile{sections/polymorphism}
+\subfile{sections/basics}
+\subfile{sections/polymorphism}
 
 \begin{frame}[fragile]{The Yoneda Embedding}
 \begin{columns}
@@ -100,5 +100,5 @@
     \end{itemize}
 \end{frame}
 
-%\subfile{sections/applications}
+\subfile{sections/applications}
 \end{document}
