--- a/slides/sections/polymorphism.tex
+++ b/slides/sections/polymorphism.tex
@@ -25,6 +25,6 @@
  \begin{itemize}
   \item For any $\bC$, $\bD$, the collection of functors $\bC \to \bD$ form a category.
   \pause\item This category is known as a \textit{functor category} and denoted $\bD^\bC$.
-  \pause\item A morphism $\bD^\bC(F, G)$ is a natural transformation $F \to G$.
+  \pause\item A morphism $\phi \in \bD^\bC(F, G)$ is a natural transformation $F \to G$.
  \end{itemize}
 \end{frame}
