--- a/slides/sections/basics.tex
+++ b/slides/sections/basics.tex
@@ -17,7 +17,7 @@
 	&& C &&&&& {}
 	\arrow["{id_1}", from=1-1, to=1-1, loop, in=55, out=125, distance=10mm]
 	\arrow["f", from=1-1, to=1-3]
-	\arrow["{f \circ g}"', from=1-1, to=3-3]
+	\arrow["{g \circ f}"', from=1-1, to=3-3]
 	\arrow["{id_2}", from=1-3, to=1-3, loop, in=55, out=125, distance=10mm]
 	\arrow["g", from=1-3, to=3-3]
 	\arrow["{id_3}"', from=3-3, to=3-3, loop, in=305, out=235, distance=10mm]
@@ -32,7 +32,7 @@ A \textit{category} $\bC$ consists of:
  \pause\item a collection $|\bC|$ of \textit{objects};
  \pause\item for all $A, B \in |\bC|$, a collection $\bC(A, B)$ of \textit{morphisms} from $A$ to $B$;
  \pause\item for all $A \in |\bC|$, an \textit{identity morphism} $id_A \in \bC(A, A)$;
- \pause\item an associative \textit{composition morphism} $f \circ g \in \bC(A,C)$ for each pair of morphisms $f \in \bC(A,B)$, $g \in \bC(A,B)$.
+ \pause\item for each pair of morphisms $g \in \bC(A,B)$, $f \in \bC(A,B)$, a morphism $g \circ f \in \bC(A,C)$, such that composition is associative.
 \end{itemize}
 \pause\item If $\bC(A, B)$ is a set, we call it the \textit{homset} from $A$ to $B$.
 \pause\item For every category $\bC$, there exists an \textit{opposite category} $\bC^{op}$, in which all morphisms are reversed.
@@ -48,16 +48,16 @@ A \textit{category} $\bC$ consists of:
 	\\
 	&& C
 	\arrow["f"{description}, from=1-1, to=1-3]
-	\arrow["{f \circ g}"{description}, from=1-1, to=3-3]
+	\arrow["{g \circ f}"{description}, from=1-1, to=3-3]
 	\arrow["g"{description}, from=1-3, to=3-3]
 \end{tikzcd}\]
 % https://q.uiver.app/#q=WzAsNCxbNCwwXSxbMCwwLCJcXHtpZF9BXFx9Il0sWzIsMCwiXFx7ZlxcfSJdLFsyLDIsIlxce2YgXFxjaXJjIGdcXH0iXSxbMSwyLCJmIFxcY2lyYyIsMV0sWzIsMywiZyBcXGNpcmMiLDFdLFsxLDMsImYgXFxjaXJjIGcgXFxjaXJjIiwxXV0=
 \[\begin{tikzcd}
 	{\{id_A\}} && {\{f\}} && {} \\
 	\\
-	&& {\{f \circ g\}}
+	&& {\{g \circ f\}}
 	\arrow["{f \circ}"{description}, from=1-1, to=1-3]
-	\arrow["{f \circ g \circ}"{description}, from=1-1, to=3-3]
+	\arrow["{g \circ f \circ}"{description}, from=1-1, to=3-3]
 	\arrow["{g \circ}"{description}, from=1-3, to=3-3]
 \end{tikzcd}\]
 \column{0.7\textwidth}
@@ -71,24 +71,39 @@ A \textit{category} $\bC$ consists of:
   \pause\item Similarly, $\bC(-, B)$ is a functor $\bC^{op} \to \mathbb{S}et$:
   \begin{itemize}
     \pause\item $\bC(-, B)$ maps an Object $A$ to the Homset $\bC(A,B)$
-    \pause\item A morphism $f : \bC(A,B)$ is mapped to the morphism $\circ f: \bC(B,C) \to \bC(A,C)$
+    \pause\item A morphism $f : \bC(B,A)$ is mapped to the morphism $\circ f: \bC(A,C) \to \bC(B,C)$
   \end{itemize}
  \end{itemize}
  \end{columns}
 \end{frame}
-\begin{frame}{Natural Transformations}
-    \begin{itemize}
-     \item A structure-preserving map between functors.
-     \begin{itemize}
-      \item Let $F,G : \bC \to \bD$ be functors.
-      \item A natural transformation $\phi$ is an indexed family of morphisms $\phi_A \in \bD(F(A), G(A))$ from $F(A)$ to $G(A)$
-      \item These morphisms satisfy the following \textit{naturality condition}:
-      \begin{align*}
-       \forall f \in \bC(A,B) : \phi_B \circ F(f) = G(f) \circ \phi_A
-      \end{align*}
-     \end{itemize}
-     \item Given two functors $F$ and $G$, we write the collection of all natural transformation between them as $\text{Nat}(F, G)$.
-    \end{itemize}
+\begin{frame}[fragile]{Natural Transformations}
+	\begin{columns}
+		\column{0.3\textwidth}
+		\[\begin{tikzcd}
+			A && B \\
+			{F(A)} && {F(B)} \\
+			\\
+			{G(A)} && {G(B)}
+			\arrow["f", from=1-1, to=1-3]
+			\arrow["{F(f)}", from=2-1, to=2-3]
+			\arrow["{\phi_A}"{description}, from=2-1, to=4-1]
+			\arrow["{\phi_B}"{description}, from=2-3, to=4-3]
+			\arrow["{G(f)}", from=4-1, to=4-3]
+		\end{tikzcd}\]
+		\column{0.7\textwidth}
+	    \begin{itemize}
+	     \item A structure-preserving map between functors.
+	     \begin{itemize}
+	      \item Let $F,G : \bC \to \bD$ be functors.
+	      \item A natural transformation $\phi$ is an indexed family of morphisms, such that for every object $A \in |\bC|$,  $\phi_A$ is a morphism from $F(A)$ to $G(A)$.
+	      \item These morphisms satisfy the following \textit{naturality condition}:
+	      \begin{align*}
+	       \forall f \in \bC(A,B) : \phi_B \circ F(f) = G(f) \circ \phi_A
+	      \end{align*}
+	     \end{itemize}
+	     \item Given two functors $F$ and $G$, we write the collection of all natural transformation between them as $\text{Nat}(F, G)$.
+	    \end{itemize}
+	\end{columns}
 \end{frame}
 \begin{frame}{Naturality from Polymorphism}
     \begin{itemize}
