completed both exercises

--- a/slides/main.tex
+++ b/slides/main.tex
@@ -32,7 +32,10 @@
 
 \newcommand{\bC}{\mathbb{C}}
 \newcommand{\bD}{\mathbb{D}}
+\newcommand{\bM}{\mathbb{M}}
+\newcommand{\bPre}{\mathbb{P}re}
 \newcommand{\bS}{\mathbb{S}}
+\newcommand{\bSet}{\mathbb{S}et}
 
 \newcommand{\mY}{\mathcal{Y}}
 
