--- a/slides/sections/applications.tex
+++ b/slides/sections/applications.tex
@@ -9,27 +9,34 @@
 	\pause\item The Yoneda lemma is often viewed as a generalization of Cayley's theorem.
 \end{itemize}
 \end{frame}
-\begin{frame}{Exercise 1 - Cayley's Theorem for Monoids}
+\begin{frame}{Exercise 2 - Cayley's Theorem for Monoids}
 	Use the Yoneda embedding to show that every monoid $M$ is isomorphic to a monoid of functions $M \to M$. 
 	\\
 	\textbf{Hint 1:} The Yoneda embedding gives an isomorphism between objects and their homfunctors. \\
-	\textbf{Hint 2:} Two weeks ago we saw that every monoid $M$ defines a category with a single object $*$ and a morphism $m$ for each element $m \in M$. 
+	\textbf{Hint 2:} Two weeks ago we saw that every monoid $M$ defines a category $\bM$ with a single object $*$ and a morphism $m$ for each element $m \in M$, where we define morphism composition to be the monoid operation.
 \end{frame}
-\begin{frame}[fragile]{Exercise 1 - Cayley's Theorem for Monoids}
+\begin{frame}[fragile]{Exercise 2 - Cayley's Theorem for Monoids}
 	\begin{columns}
 		\column{0.3\textwidth}
 		\[\begin{tikzcd}
-			A && B \\
+			* && * \\
 			\\
-			{\mathbb{C}(A, -)} && {C(B,-)}
-			\arrow["{f\ \in\ \mathbb{C}(A,B)}", from=1-1, to=1-3]
+			{\bM(*, -)} && {\bM(*,-)}
+			\arrow["{m\ \in\ \bM(*,*)}", from=1-1, to=1-3]
 			\arrow["{\mathcal{Y}}"', dotted, leftrightarrow, from=1-1, to=3-1]
 			\arrow["{\mathcal{Y}}", dotted, leftrightarrow, from=1-3, to=3-3]
-			\arrow["{\mathcal{Y}(f)}"', from=3-1, to=3-3]
+			\arrow["{\mathcal{Y}(m) = m \circ}"', from=3-1, to=3-3]
 		\end{tikzcd}\]
 		\column{0.7\textwidth}
 		\begin{itemize}
 			\item The Yoneda embedding is an isomorphism mapping each object to its homfunctor.
+			\pause\item We only have one object $*$, and thus only one homfunctor $\bM(*, -)$.
+			\pause\item Each element $m \in M$ is a morphism. By the definition of the homfunctor, this morphism is mapped to the set function 
+			\begin{align*}
+				\bM(*, m) = m \circ : M &\to M\\
+				n &\mapsto m \circ n
+			\end{align*}
+			\vspace{-20pt}\pause\item Thus, the Yoneda embedding on $M$ is an isomorphism between monoid objects and a set of functions $M \to M$. These functions form a monoid under composition.\\\hfill $\qed$ 
 		\end{itemize}
 	\end{columns}
 \end{frame}
