--- a/slides/sections/basics.tex
+++ b/slides/sections/basics.tex
@@ -25,8 +25,6 @@
 \column{0.7\textwidth}
 \begin{itemize}
  \item
-
-
 A \textit{category} $\bC$ consists of:
 \begin{itemize}
  \pause\item a collection $|\bC|$ of \textit{objects};
@@ -39,42 +37,28 @@ A \textit{category} $\bC$ consists of:
 \end{itemize}
 \end{columns}
 \end{frame}
-\begin{frame}[fragile]{Homfunctors}
-\begin{columns}
-\column{0.3\textwidth}
- % https://q.uiver.app/#q=WzAsMyxbMCwwLCJBIl0sWzIsMiwiQyJdLFsyLDAsIkIiXSxbMCwxLCJmIFxcY2lyYyBnIiwxXSxbMCwyLCJmIiwxXSxbMiwxLCJnIiwxXV0=
-\[\begin{tikzcd}
-	A && B \\
-	\\
-	&& C
-	\arrow["f"{description}, from=1-1, to=1-3]
-	\arrow["{g \circ f}"{description}, from=1-1, to=3-3]
-	\arrow["g"{description}, from=1-3, to=3-3]
-\end{tikzcd}\]
-% https://q.uiver.app/#q=WzAsNCxbNCwwXSxbMCwwLCJcXHtpZF9BXFx9Il0sWzIsMCwiXFx7ZlxcfSJdLFsyLDIsIlxce2YgXFxjaXJjIGdcXH0iXSxbMSwyLCJmIFxcY2lyYyIsMV0sWzIsMywiZyBcXGNpcmMiLDFdLFsxLDMsImYgXFxjaXJjIGcgXFxjaXJjIiwxXV0=
-\[\begin{tikzcd}
-	{\{id_A\}} && {\{f\}} && {} \\
-	\\
-	&& {\{g \circ f\}}
-	\arrow["{f \circ}"{description}, from=1-1, to=1-3]
-	\arrow["{g \circ f \circ}"{description}, from=1-1, to=3-3]
-	\arrow["{g \circ}"{description}, from=1-3, to=3-3]
-\end{tikzcd}\]
-\column{0.7\textwidth}
- \begin{itemize}
-  \item For any category $\bC$, a homset $\bC(A,B)$ is a set of morphisms.
-  \pause\item We define a functor $\bC(A, -) : \bC \to \mathbb{S}et$:
-  \begin{itemize}
-    \pause\item $\bC(A, -)$ maps an Object $B$ to the Homset $\bC(A,B)$
-    \pause\item A morphism $f : \bC(B,C)$ is mapped to the morphism $f \circ : \bC(A,B) \to \bC(A,C)$
-  \end{itemize}
-  \pause\item Similarly, $\bC(-, B)$ is a functor $\bC^{op} \to \mathbb{S}et$:
-  \begin{itemize}
-    \pause\item $\bC(-, B)$ maps an Object $A$ to the Homset $\bC(A,B)$
-    \pause\item A morphism $f : \bC(B,A)$ is mapped to the morphism $\circ f: \bC(A,C) \to \bC(B,C)$
-  \end{itemize}
- \end{itemize}
- \end{columns}
+\begin{frame}[fragile]{Functors}
+	\begin{columns}
+		\column{0.3\textwidth}
+		\[\begin{tikzcd}
+			A && B \\
+			\\
+			{F(A)} && {F(A)}
+			\arrow["{f\ \in\ \mathbb{C}(A,B)}", from=1-1, to=1-3]
+			\arrow["{F}"', dotted, from=1-1, to=3-1]
+			\arrow["{F}", dotted, from=1-3, to=3-3]
+			\arrow["{F(f)}"', from=3-1, to=3-3]
+		\end{tikzcd}\]
+		\column{0.7\textwidth}
+		A \textit{functor} $F : \bC \to \bD$ is a structure-preserving map between two categories:
+		\begin{itemize}
+			\pause\item $F$ maps an object $A \in |\bC|$ to an object $B \in |\bD|$
+			\pause\item $F$ maps a morphism $f \in \bC(A,B)$ to a morphism $F(f) \in \bD(F(A),F(B))$
+			\pause \item $F(id_A) = id_{F(A)}$
+			\pause \item $F(g \circ f) = F(g) \circ F(f)$
+		\end{itemize}
+		Functors from a category into itself are known as \textit{endofunctors}.
+\end{columns}
 \end{frame}
 \begin{frame}[fragile]{Natural Transformations}
 	\begin{columns}
@@ -92,26 +76,81 @@ A \textit{category} $\bC$ consists of:
 		\end{tikzcd}\]
 		\column{0.7\textwidth}
 	    \begin{itemize}
-	     \item A structure-preserving map between functors.
+	     \item Structure-preserving maps between functors.
 	     \begin{itemize}
-	      \item Let $F,G : \bC \to \bD$ be functors.
-	      \item A natural transformation $\phi$ is an indexed family of morphisms, such that for every object $A \in |\bC|$,  $\phi_A$ is a morphism from $F(A)$ to $G(A)$.
-	      \item These morphisms satisfy the following \textit{naturality condition}:
+	      \pause\item Let $F,G : \bC \to \bD$ be functors.
+	      \pause\item A natural transformation $\phi$ is an \textit{indexed family of morphisms} - for every object $A \in |\bC|$,  $\phi_A$ is a morphism from $F(A)$ to $G(A)$.
+	      \pause\item These morphisms satisfy the \textit{naturality condition}:
 	      \begin{align*}
 	       \forall f \in \bC(A,B) : \phi_B \circ F(f) = G(f) \circ \phi_A
 	      \end{align*}
 	     \end{itemize}
-	     \item Given two functors $F$ and $G$, we write the collection of all natural transformation between them as $\text{Nat}(F, G)$.
+	     \pause\item Given two functors $F$ and $G$, we write the collection of all natural transformation between them as $\text{Nat}(F, G)$.
 	    \end{itemize}
 	\end{columns}
 \end{frame}
-\begin{frame}{Naturality from Polymorphism}
-    \begin{itemize}
-      \item The naturality condition resembles an equality we saw a few weeks ago:
-      \begin{align*}
-       r_B \circ \texttt{map}(a) = \texttt{map}(a) \circ r_A
-      \end{align*}
-      \pause \item This is the free theorem we got for a parametrically polymorphic function \texttt{r :: [X] -> [X]} and an arbitrary function \texttt{a : A -> B}.
-      \pause \item This free theorem is equivalent to the statement that $r$ is a natural transformation.
-    \end{itemize}
+\begin{frame}{Exercise 1 : Order Categories}
+\begin{itemize}
+	\item[a)] Let $\leq$ be a reflexive, transitive order (a \textit{preorder}) on a set $M$. Show that if we define objects by $|\bPre(M, \leq)| = M$ and morphisms by $f_{x \leq y} \in \bPre(x,y) \Leftrightarrow x \leq y$, then $\bPre(M, \leq)$ forms a category.
+	\item[b)] Let $F : \bM \to \bM$ be an endofunctor on $\bM$. Show that $F$ defines a monotonic function $M \to M$, i.e. $\forall x,y : x \leq y \implies F(x) \leq F(y)$.
+	\item[c)] Let $F,G : M \to M$ be monotonic functions. Let $\phi$ be a natural transformation $F \to G$. Show that $\forall x \in M: F(x) \leq G(x)$.
+\end{itemize}
+\end{frame}
+\begin{frame}[fragile]{Exercise 1 : Order Categories, Solution a)}
+	\begin{columns}
+		\column{0.3\textwidth}
+		% https://q.uiver.app/#q=WzAsMyxbMCwwLCJ4Il0sWzIsMCwieSJdLFsyLDIsInoiXSxbMCwxLCJmX3t4IFxcbGVxIHl9IiwyXSxbMSwyLCJnX3t5IFxcbGVxIHp9IiwyXSxbMCwyLCIoZyBcXGNpcmMgZilfe3ggXFxsZXEgen0iLDJdLFswLDAsInggXFxsZXEgeCJdLFsxLDEsInkgXFxsZXEgeSJdLFsyLDIsInogXFxsZXEgeiIsMix7InJhZGl1cyI6LTN9XV0=
+		\[\begin{tikzcd}
+			x && y \\
+			\\
+			&& z
+			\arrow["{x \leq x}", from=1-1, to=1-1, loop, in=55, out=125, distance=10mm]
+			\arrow["{{x \leq y}}"', from=1-1, to=1-3]
+			\arrow["{{x \leq z}}"', from=1-1, to=3-3]
+			\arrow["{y \leq y}", from=1-3, to=1-3, loop, in=55, out=125, distance=10mm]
+			\arrow["{{y \leq z}}"', from=1-3, to=3-3]
+			\arrow["{z \leq z}"', from=3-3, to=3-3, loop, in=305, out=235, distance=10mm]
+		\end{tikzcd}\]
+		\column{0.7\textwidth}
+		\begin{itemize}
+			\item $\leq$ is reflexive, so we have $\forall x : x \leq x \implies \exists id_{x \leq x} \in \bPre(x,x)$.
+			\item Because of transitivity, for every pair of morphisms $f_{x \leq y}$ and $g_{y \leq z}$, we have a composed morphism $(g \circ f)_{x \leq z}$.
+			\item Since our morphisms are just witnesses of an ordering, they dont care about the order of function application, so composition is associative.
+		\end{itemize} 
+	\end{columns} 
+\end{frame}
+\begin{frame}[fragile]{Exercise 1 : Order Categories, Solution b)}
+	\begin{columns}
+		\column{0.5\textwidth}
+		% https://q.uiver.app/#q=WzAsNCxbMCwwLCJ4Il0sWzMsMCwieSJdLFswLDIsIkYoeCkiXSxbMywyLCJGKHkpIl0sWzAsMiwiRiJdLFsxLDMsIkYiXSxbMCwxLCJmIDogeCBcXGxlcSB5IiwxXSxbMiwzLCJGKGYpIDogRih4KSBcXGxlcSBGKHkpIiwxXV0=
+		\[\begin{tikzcd}
+			x &&& y \\
+			\\
+			{F(x)} &&& {F(y)}
+			\arrow["{{x \leq y}}"{description}, from=1-1, to=1-4]
+			\arrow["F", from=1-1, to=3-1]
+			\arrow["F", from=1-4, to=3-4]
+			\arrow["{{F(x) \leq F(y)}}"{description}, from=3-1, to=3-4]
+		\end{tikzcd}\]
+		\column{0.5\textwidth}
+		\begin{itemize}
+			\item By the definition of functors, $F$ must take each morphism $f : x \leq y$ to a morphism $F(f)_{F(x) \leq F(y)}$.
+		\end{itemize} 
+	\end{columns} 
+\end{frame}
+\begin{frame}[fragile]{Exercise 1 : Order Categories, Solution c)}
+	\begin{columns}
+		\column{0.3\textwidth}
+		% https://q.uiver.app/#q=WzAsNCxbMCwwLCJ4Il0sWzMsMCwieSJdLFswLDIsIkYoeCkiXSxbMywyLCJGKHkpIl0sWzAsMiwiRiJdLFsxLDMsIkYiXSxbMCwxLCJmIDogeCBcXGxlcSB5IiwxXSxbMiwzLCJGKGYpIDogRih4KSBcXGxlcSBGKHkpIiwxXV0=
+		\[\begin{tikzcd}
+			F(x)\\
+			\\
+			{G(x)}
+			\arrow["\phi_x", from=1-1, to=3-1]
+		\end{tikzcd}\]
+		\column{0.7\textwidth}
+		\begin{itemize}
+			\item By the definition of natural transformations, for every object $x$, $\phi_x$ is a morphism $F(x) \to G(x)$. If such a morphism exists, we have $F(x) \leq G(x)$.
+		\end{itemize} 
+	\end{columns} 
 \end{frame}
