first complete draft of the slides

--- a/slides/main.tex
+++ b/slides/main.tex
@@ -5,11 +5,10 @@
 \usepackage{tikz}
 \usepackage{amsmath}
 \usepackage[font=scriptsize,labelfont=bf]{caption}
-\usepackage{algorithmicx}
 \usepackage{listings}
 \usepackage{animate}
-\usepackage{CJKutf8}
 \usepackage{subfiles}
+\usepackage{listings}
 \renewcommand{\footnotesize}{\tiny}
 
 \usepackage{tikz}
@@ -30,10 +29,13 @@
 \usetheme{ufr}
 \usecolortheme{ufr}
 
+\newcommand{\bAda}{{\mathbb{A}da}}
+\newcommand{\bAdaP}{\mathbb{A}daP}
 \newcommand{\bC}{\mathbb{C}}
 \newcommand{\bD}{\mathbb{D}}
 \newcommand{\bM}{\mathbb{M}}
 \newcommand{\bPre}{\mathbb{P}re}
+\newcommand{\bProf}{{\mathbb{P}rof}}
 \newcommand{\bS}{\mathbb{S}}
 \newcommand{\bSet}{\mathbb{S}et}
 
@@ -58,5 +60,6 @@
 \subfile{sections/basics}
 \subfile{sections/polymorphism}
 \subfile{sections/yoneda}
-\subfile{sections/applications}
+\subfile{sections/cayley}
+\subfile{sections/optics}
 \end{document}
