--- a/slides/sections/basics.tex
+++ b/slides/sections/basics.tex
@@ -33,7 +33,8 @@ A \textit{category} $\bC$ consists of:
  \pause\item for each pair of morphisms $g \in \bC(A,B)$, $f \in \bC(A,B)$, a morphism $g \circ f \in \bC(A,C)$, such that composition is associative.
 \end{itemize}
 \pause\item If $\bC(A, B)$ is a set, we call it the \textit{homset} from $A$ to $B$.
-\pause\item For every category $\bC$, there exists an \textit{opposite category} $\bC^{op}$, in which all morphisms are reversed.
+\pause\item For every category $\bC$, the \textit{opposite category} $\bC^{op}$ is a category.
+\pause\item For every pair of categories $\bC$, $\bD$, the \textit{product category} $\bC \times \bD$ is a category.
 \end{itemize}
 \end{columns}
 \end{frame}
