cleaned up some slides

--- a/slides/sections/basics.tex
+++ b/slides/sections/basics.tex
@@ -2,7 +2,7 @@
  \begin{itemize}
   \item A common sentiment in many cultures is the idea that things are defined by how they interact with their surroundings.
   \pause\item ``\textit{Tell me your company, and I will tell you what you are.}''\footnote{Quoted as a proverb in \textit{Don Quixote}}
-  \pause\item The Yoneda Lemma is the result of applying this way of thinking to mathematical objects in category theory.
+  \pause\item The Yoneda lemma is the result of applying this way of thinking to mathematical objects in category theory.
   \pause\item As a result, a category $\bC$ is often best understood by instead studying functors from that category into $\mathbb{S}et$.
  \end{itemize}
 \end{frame}
