--- a/slides/sections/yoneda.tex
+++ b/slides/sections/yoneda.tex
@@ -20,15 +20,14 @@
 				A &\mapsto \bC(A,-)
 			\end{align*}
 			\vspace{-16pt}\pause\item We call $\mY$ the \textit{Yoneda embedding}.
-			\pause\item Given $f \in \bC(A,B)$, $\mY(f)$ has to be a morphism between $\bC(A, -)$ and $\bC(B, -)$ in the functor category $\bS et^{\bC}$.
-			\pause\item Therefore, $\mY(f)$ has to be a natural transformation between $\bC(A, -)$ and $\bC(B, -)$
+			%\pause\item Given $f \in \bC(A,B)$, $\mY(f)$ has to be a morphism between $\bC(A, -)$ and $\bC(B, -)$ in the functor category $\bS et^{\bC}$.
+			%\pause\item Therefore, $\mY(f)$ has to be a natural transformation between $\bC(A, -)$ and $\bC(B, -)$
 		\end{itemize}
 	\end{columns}
 \end{frame}
-
 \begin{frame}{The Yoneda lemma}
 	\begin{itemize}
-		\item It turns out we can do even better!
+		%\item It turns out we can do even better!
 		\pause\item We can construct the set of all natural transformations between $\bC(A, -)$ and \underline{any} Functor $F :\bC \to \bS et$.
 		\pause\item Specifically, the Yoneda lemma states that:
 		\begin{align*}
@@ -36,10 +35,9 @@
 		\end{align*}
 		\begin{itemize}
 			\vspace{-18pt}\pause\item Furthermore, this isomorphism is a natural transformation.
-			\pause\item So we can construct the Yoneda embedding $\mY$ from the set $F(A)$.
-			\pause\item Vice versa, if we know all natural transformations $\text{Nat}(\bC(A,-), F)$, we can construct the set $F(A)$.
+			%\pause\item So we can construct the Yoneda embedding $\mY$ from the set $F(A)$.
+			%\pause\item Vice versa, if we know all natural transformations $\text{Nat}(\bC(A,-), F)$, we can construct the set $F(A)$.
 		\end{itemize}
-		\pause\item Note that this is the \textit{covariant} version of the Yoneda lemma. The lemma is sometimes stated equivalently in terms of the \textit{contravariant homfunctor}  $\bC(-,A)$.
 	\end{itemize}
 \end{frame}
 
