--- a/slides/sections/optics.tex
+++ b/slides/sections/optics.tex
@@ -2,9 +2,9 @@
 	frame=none,
 	xleftmargin=2pt,
 	stepnumber=1,
-	numbers=left,
-	numbersep=5pt,
-	numberstyle=\ttfamily\tiny\color[gray]{0.3},
+	%numbers=left,
+	%numbersep=5pt,
+	%numberstyle=\ttfamily\tiny\color[gray]{0.3},
 	belowcaptionskip=\bigskipamount,
 	captionpos=b,
 	escapeinside={*'}{'*},
@@ -35,10 +35,10 @@ data Adapter a b s t = Adapter { from :: s -> a, to :: b -> t }
 	\end{lstlisting}
 	\begin{itemize}
 		\item \texttt{s} and \texttt{t} are assumed to be composite types containing values of types \texttt{a} and \texttt{b} respectively.
-		\pause\item Categorically, this translates to a pair of morphisms $\bC(S,A) \times \bC(B,T)$. 
-		\pause\item This is a morphism in the corresponding product category $(\bC^{op} \times \bC)((A,B), (S,T))$
+		\pause\item Categorically, this translates to a pair of morphisms $\bHask(S,A) \times \bHask(B,T)$. 
+		\pause\item This pair is a morphism $(\bHask^{op} \times \bHask)((A,B), (S,T))$.
 		\pause\item We can compose adapters with matching types and define an identity adapter \texttt{Adapter id id}.
-		\pause\item This lets us equivalently view a category $\bC^{op} \times \bC$ as the category $\bAda$ of adapters of objects of $\bC$.
+		\pause\item This lets us view the category $\bHask^{op} \times \bHask$ as the category $\bAda$ of adapters.
 	\end{itemize}
 \end{frame}
 \begin{frame}[fragile]{Profunctors}
@@ -47,7 +47,7 @@ data Adapter a b s t = Adapter { from :: s -> a, to :: b -> t }
 		\pause\item As Haskell code:
 		\begin{lstlisting}
 class Profunctor p where
-	dimap :: (c -> a) -> (b -> d) -> p a b -> p c d
+	dimap :: (s -> a) -> (b -> t) -> p a b -> p s t
 		\end{lstlisting}
 		\pause\item The canonical example of a profunctor is the function type former, 
 		
@@ -56,7 +56,7 @@ class Profunctor p where
 instance Profunctor (->) where
 	dimap f g h = g . h . f
 		\end{lstlisting}
-		\pause\item We define the category $\bProf$ to be the functor category $\bSet^(\bC^{op} \times \bC) = \bSet^\bAda$
+		\pause\item We define the category $\bProf$ of Profunctors on Haskell types to be the functor category $\bSet^{(\bHask^{op} \times \bHask)} = \bSet^\bAda$
 	\end{itemize}
 \end{frame}
 \begin{frame}[fragile]{Functor Application as a Functor}
@@ -79,18 +79,33 @@ instance Profunctor (->) where
 	\end{columns}
 \end{frame}
 \begin{frame}[fragile]{Profunctor Adapters}
-	\begin{itemize}
-		\item The profunctor representation of an adapter is given by:
-		\begin{lstlisting}
-type AdapterP a b s t = forall p. Profunctor p -> p a b -> p s t
-		\end{lstlisting}
-		\pause\item As we saw earlier, the polymorphism makes \texttt{AdapterP} a natural transformation.
-		\pause\item We define $\bAdaP$ as the functor category whose objects are those of $\bAda = \bC^{op} \times \bC$, but whose morphisms are profunctor adapters.
-		\pause\item The homsets in $\bAdaP$ are defined as:
-		\begin{align*}
-			\bAdaP ((A,B),(S,T)) &= \bSet^\bProf(-(A, B), -(S, T))\\
-		\end{align*}
+	\begin{columns}
+		\column{0.3\textwidth}
+			% https://q.uiver.app/#q=WzAsNCxbMCwwLCJwKEEsQikiXSxbMCwyLCJwKFMsVCkiXSxbMSwwLCJwJyhBLEIpIl0sWzEsMiwicCcoUyxUKSJdLFswLDEsIkFkYXB0ZXJQX3AiLDJdLFsyLDMsIkFkYXB0ZXJQX3twJ30iLDJdLFswLDIsIlxcZXRhIiwxXSxbMSwzLCJcXHZhcnRoZXRhIiwxXV0=
+			\[\begin{tikzcd}
+				{p(A,B)} & {p'(A,B)} \\
+				\\
+				{p(S,T)} & {p'(S,T)}
+				\arrow["\eta"{description}, from=1-1, to=1-2]
+				\arrow["{AdapterP_p}"', from=1-1, to=3-1]
+				\arrow["{AdapterP_{p'}}"', from=1-2, to=3-2]
+				\arrow["\vartheta"{description}, from=3-1, to=3-2]
+			\end{tikzcd}\]
+		\column{0.7\textwidth}
+		\begin{itemize}
+			\item The profunctor representation of an adapter is given by:
+			\begin{lstlisting}
+type AdapterP a b s t =
+	forall p. Profunctor p -> p a b -> p s t
+			\end{lstlisting}
+			\pause\item As we saw earlier, the polymorphism makes \texttt{AdapterP} a natural transformation.
+			\pause\item We define $\bAdaP$ as the functor category whose objects are those of $\bAda = \bHask^{op} \times \bHask$, but whose morphisms are profunctor adapters.
+			\pause\item The homsets in $\bAdaP$ are defined as:
+			\begin{align*}
+				\bAdaP ((A,B),(S,T)) &= \bSet^\bProf(-(A, B), -(S, T))\\
+			\end{align*}
 		\end{itemize}
+	\end{columns}
 \end{frame}
 \begin{frame}[fragile]{Equivalence of the two representations}
 	\begin{itemize}
@@ -132,7 +147,7 @@ type AdapterP a b s t = forall p. Profunctor p -> p a b -> p s t
 \end{frame}
 \begin{frame}{Summary}
 	\begin{itemize}
-		\item The Yoneda lemma is a fundamental result in category.
+		\item The Yoneda lemma is a fundamental result in category theory.
 		\pause\item The lemma states that the set of natural transformations between a homfunctor $\bC(A, -)$ and an arbitrary functor $F : \bC \to \bSet$ is naturally isomorphic to the set $F(A)$.
 		\pause\item The Yoneda lemma enables the use of the Yoneda embedding, which is a natural isomorphism between a category $\bC$ and the category of homfunctors on $\bC$.
 		\pause\item Using the Yoneda embedding twice, we have shown the equivalence of adapters and profunctor adapters.
