--- a/slides/sections/polymorphism.tex
+++ b/slides/sections/polymorphism.tex
@@ -45,9 +45,9 @@
 		\end{tikzcd}\]
 		% https://q.uiver.app/#q=WzAsNCxbNCwwXSxbMCwwLCJcXHtpZF9BXFx9Il0sWzIsMCwiXFx7ZlxcfSJdLFsyLDIsIlxce2YgXFxjaXJjIGdcXH0iXSxbMSwyLCJmIFxcY2lyYyIsMV0sWzIsMywiZyBcXGNpcmMiLDFdLFsxLDMsImYgXFxjaXJjIGcgXFxjaXJjIiwxXV0=
 		\[\begin{tikzcd}
-			{\{id_A\}} && {\{f\}} && {} \\
+			{\bC(A,A)} && {\bC(A,B)}\\
 			\\
-			&& {\{g \circ f\}}
+			&& {\bC(A,C)}
 			\arrow["{f \circ}"{description}, from=1-1, to=1-3]
 			\arrow["{g \circ f \circ}"{description}, from=1-1, to=3-3]
 			\arrow["{g \circ}"{description}, from=1-3, to=3-3]
@@ -63,7 +63,7 @@
 			\pause\item Similarly, $\bC(-, B)$ is a functor $\bC^{op} \to \mathbb{S}et$:
 			\begin{itemize}
 				\pause\item $\bC(-, B)$ maps an Object $A$ to the Homset $\bC(A,B)$
-				\pause\item A morphism $f : \bC(B,A)$ is mapped to the morphism $\circ f: \bC(A,C) \to \bC(B,C)$
+				\pause\item A morphism $f : \bC(C,A)$ is mapped to the morphism $\circ f: \bC(A,B) \to \bC(C,B)$
 			\end{itemize}
 		\end{itemize}
 	\end{columns}
