--- a/slides/sections/cayley.tex
+++ b/slides/sections/cayley.tex
@@ -1,4 +1,4 @@
-\begin{frame}{Cayley's Theorem}
+\begin{frame}{Application : Cayley's Theorem}
 \begin{itemize}
 	\item Every group $(G, *, e)$ is isomorphic to a subgroup of the group of permutations of $G$.
 	\pause\item Specifically:
