--- a/slides/sections/basics.tex
+++ b/slides/sections/basics.tex
@@ -17,7 +17,7 @@
 	&& C &&&&& {}
 	\arrow["{id_1}", from=1-1, to=1-1, loop, in=55, out=125, distance=10mm]
 	\arrow["f", from=1-1, to=1-3]
-	\arrow["{g \circ f}"', from=1-1, to=3-3]
+	\arrow["{h}"', from=1-1, to=3-3]
 	\arrow["{id_2}", from=1-3, to=1-3, loop, in=55, out=125, distance=10mm]
 	\arrow["g", from=1-3, to=3-3]
 	\arrow["{id_3}"', from=3-3, to=3-3, loop, in=305, out=235, distance=10mm]
@@ -30,7 +30,7 @@ A \textit{category} $\bC$ consists of:
  \pause\item a collection $|\bC|$ of \textit{objects};
  \pause\item for all $A, B \in |\bC|$, a collection $\bC(A, B)$ of \textit{morphisms} from $A$ to $B$;
  \pause\item for all $A \in |\bC|$, an \textit{identity morphism} $id_A \in \bC(A, A)$;
- \pause\item for each pair of morphisms $g \in \bC(A,B)$, $f \in \bC(A,B)$, a morphism $g \circ f \in \bC(A,C)$, such that composition is associative.
+ \pause\item for each pair of morphisms $g \in \bC(B,C)$, $f \in \bC(A,B)$, a morphism $g \circ f \in \bC(A,C)$, such that composition is associative.
 \end{itemize}
 \pause\item If $\bC(A, B)$ is a set, we call it the \textit{homset} from $A$ to $B$.
 \pause\item For every category $\bC$, the \textit{opposite category} $\bC^{op}$ is a category.
