--- a/slides/sections/polymorphism.tex
+++ b/slides/sections/polymorphism.tex
@@ -28,6 +28,6 @@
       \end{equation*}
       \vspace{-18pt}
       \pause\item So our free theorem is a proof that any parametrically polymorphic function \texttt{r} is a natural transformation!
-      \pause\item It turns out that parametrically polymorphic functions correspond exactly to natural transformations between endofunctors $\bS et \to \bS et$.
+      \pause\item It turns out that parametrically polymorphic functions correspond exactly to natural transformations between endofunctors $\bHask \to \bHask$.
     \end{itemize}
 \end{frame}
