--- a/slides/sections/yoneda.tex
+++ b/slides/sections/yoneda.tex
@@ -21,7 +21,7 @@
 		\end{tikzcd}\]
 		\column{0.7\textwidth}
 		\begin{itemize}
-			\item For any category $\bC$, a homset $\bC(A,B)$ is a set of morphisms.
+			\item For any locally small category $\bC$, a homset $\bC(A,B)$ is a set of morphisms.
 			\pause\item We define a functor $\bC(A, -) : \bC \to \mathbb{S}et$:
 			\begin{itemize}
 				\pause\item $\bC(A, -)$ maps an Object $B$ to the Homset $\bC(A,B)$
