--- a/slides/sections/yoneda.tex
+++ b/slides/sections/yoneda.tex
@@ -94,7 +94,7 @@
 		\pause\item We can construct the set of all natural transformations between $\bC(A, -)$ and \underline{any} Functor $F :\bC \to \bS et$.
 		\pause\item Specifically, the Yoneda lemma states that:
 		\begin{align*}
-			\text{Nat}(\bC(A,-), F) \simeq F(A)
+			\bSet^\bC(\bC(A,-), F) \simeq F(A)
 		\end{align*}
 		\begin{itemize}
 			\vspace{-18pt}\pause\item Furthermore, this isomorphism is a natural transformation.
